syntax = "proto3";

option java_multiple_files = true;
package helloworld;

service Employee {
  rpc get_employee(EmployeeReq)  returns (EmployeeRes){}
}

message EmployeeReq{
  uint32 id = 1;
}

message EmployeeRes{
  uint32 employeeId = 1;
}